--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.0",
+    "core-js-pure": "^3.42.0",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
