--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "core-js-pure": "^3.42.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.3"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
